<resources>
    <string name="app_name">Amiibo</string>
    <string name="home_name" translatable="false"> </string>
    <string name="image_du_quiz">Image du quiz</string>
    <string name="bouton_coupe">Bouton coupe</string>
    <!-- Format des points -->
    <string name="points_to_next_level">Prochain niveau dans %1$d points</string> <!-- Prochain niveau dans x points -->
    <string name="games_played">Parties jouées : %1$d</string> <!-- Parties jouées -->
    <string name="correct_answers">Bonnes réponses : %1$d</string><!-- Bonnes réponses -->
    <string name="wrong_answers">Mauvaises réponses : %1$d</string>
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="m">m</string>
    <string name="i">i</string>
    <string name="b">b</string>
    <string name="o">o</string>
    <string name="bouton_valider">Bouton valider</string>
    <string name="recompenses">RECOMPENSES</string>
    <string name="mario" translatable="false">Mario</string>
    <string name="luigi" translatable="false">Luigi</string>
    <string name="peach" translatable="false">Peach</string>
    <string name="bowser" translatable="false">Bowser</string>
    <string name="themes">THEMES</string>
    <string name="musiques">MUSIQUES</string>
    <string name="bouton_son">Bouton son</string>
    <string name="zelda_lost_woods" translatable="false">Zelda lost woods</string>
    <string name="pokemon_yoneuve" translatable="false">Pokemon Yoneuve</string>
    <string name="marios_bros" translatable="false">Marios bros</string>
    <string name="sonic_green_hills" translatable="false">Sonic Green hills</string>
    <string name="name">Nom</string>
    <string name="bouton_manette">Bouton manettej</string>
    <string name="bouton_book">B</string>
    <string name="level">Niveau</string>
    <string name="resetall">Réinitialiser votre compte</string>
    <string name="niveau">NIVEAU :</string>
    <string name="points_format">%1$d points</string>
    <string name="type_name">Qui est l\'amiibo ?</string>
    <string name="type_gameseries">Quel est le jeu ?</string> <!-- Mauvaises réponses -->
    <string name="error_blank_name">Le nom ne peut pas être vide ou composé uniquement d\'espaces</string>
    <string name="error_invalid_name">Le nom doit contenir entre 2 et 12 caractères sans caractères spéciaux</string>
    <string name="success_update_name">Trop cool ton nouveau nom !</string>
    <string name="conf_supp">Vous confirmez la suppression ?</string>
    <string name="data_reset">Les données ont été réinitialisées !</string>
    <string name="data_reset_err">"Aie, un soucis lors de la réinitialisation des données"</string>
    <string name="quiz_end_message">Fin du quiz ! Vous avez répondu à %1$d questions.</string>
    <string name="error_loading_question">Erreur de chargement de la question</string>
    <string name="question_not_loaded">La question n\'est pas encore chargée.</string>
    <string name="correct_answer">Bonne réponse !</string>
    <string name="wrong_answer">Mauvaise réponse !</string>
    <string name="not_enough_selected">Il n\'y a pas assez d\'éléments avec la checkbox cochée. Seulement %1$d élément(s) sélectionné(s).</string>
    <string name="error_message">Erreur : %1$s</string>
    <string name="level_label">Nv%1$d</string>
    <string name="user_text">utilisateur</string>
    <string name="quizz">Dans ce quiz Amiibo, chaque bonne réponse vous rapporte +2 points, tandis qu’une mauvaise vous en fait perdre -2 points. Si vous choisissez de passer une question en swipant ou en cliquant sur les flèches en bas, vous perdez -1 point. Votre score est affiché en temps réel et change de couleur selon votre performance. Montez de niveau tous les 20 points pour débloquer des icônes ! À vous de jouer !</string>
</resources>